deployment/production/gcp-deployment-baseline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-info-service-baseline
  namespace: customer-info
  labels:
    app: customer-info-service
    version: baseline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-info-service
      version : baseline
  template:
    metadata:
      labels:
        app: customer-info-service
        version: baseline
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: prod-application2
      containers:
      - name: customer-info-service
        image: '${#stage(''Get Baseline'').context["artifacts"][0]["reference"]}'
        ports:
        - containerPort: 8090
        - containerPort: 8091
        readinessProbe:
          httpGet:
            path: /monitor/health
            port: 8091
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: "1Gi"
          limits:
            cpu: 2
            memory: "1.5Gi"
