deployment/production/gcp-deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-info-service-canary
  namespace: customer-info
  labels:
    app: customer-info-service
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-info-service
      version : canary
  template:
    metadata:
      labels:
        app: customer-info-service
        version: canary
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: prod-application2
      containers:
      - name: customer-info-service
        image: 'gcr.io/project-apigate-prod-hub/customer-info-service:${trigger[''tag'']}'
        ports:
        - containerPort: 8091
        readinessProbe:
          httpGet:
            path: /monitor/health
            port: 8091
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: "1Gi"
          limits:
            cpu: 2
            memory: "1.5Gi"
