deployment/production/gcp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-info-service
  namespace: customer-info
  labels:
    app: customer-info-service
    version: v1
spec:
  selector:
    app: customer-info-service
  ports:
    - protocol: TCP
      name: http-customer-info-service
      port: 8091
      targetPort: 8091
  type: ClusterIP
