deployment/production/gcp-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-info
spec:
  hosts:
  - customer-info-service.customer-info.svc.cluster.local
  http:
  - route:
    - destination:
        host: customer-info-service
        subset: v1
        port:
          number: 8091
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-info
spec:
  host: customer-info-service.customer-info.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: baseline
    labels:
      version: baseline
  - name: canary
    labels:
      version: canary
